# agvedu

./: start_agv (copy).sh  start_agv.sh  start_agv_and_kinova.sh
agv_tcp_velocity/: readme.txt
agv_tcp_velocity/launch/: move_base.launch  my_localize.launch  pure_matcher.launch
agv_tcp_velocity/map/: map.yaml
agv_tcp_velocity/map2/: map.yaml
agv_tcp_velocity/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_agv.xml
arduino_io/: CMakeLists.txt  package.xml
arduino_io/arduino/: arduino.ino
arduino_io/src/: arduino_io.cpp
gazebo_ros_pkgs-melodic-devel/gazebo_plugins/: CMakeLists.txt
ira_laser_tools-master/launch/: laserscan_multi_merger.launch
move_forward/: CMakeLists.txt
move_forward/launch/: move_and_avoid_dynamic_object.launch
move_forward/src/: get_state_car.cpp  move_and_avoid_dynamic_object.cpp
